<resources>
    <string name="app_name">PhotoEditor</string>
    <string name="title_activity_photo_editor">PhotoEditorActivity</string>
    <string name="done">完成</string>
    <string name="save">保存到手机</string>
    <string name="go">下一步</string>
    <string name="clear_all">移除全部效果</string>
    <string name="camera">相机</string>
    <string name="gallery">相册</string>
    <string name="upload_dialog_title">上转</string>
    <string name="upload_picker_title">选择</string>
    <string name="directory_create_fail">Failed to create directory</string>
    <string name="access_media_permissions_msg">To attach photos, we need to access media on your device</string>
    <string name="continue_txt">继续</string>
    <string name="not_now">NOT NOW</string>
    <string name="media_access_denied_msg">You denied storage access, no photos will be added.</string>
    <string name="save_image_succeed">图片已保存</string>

    <string name="ic_close">"\ue918"</string>
    <string name="ic_text">"\ue945"</string>
    <string name="ic_draw">""\ue944</string>
    <string name="ic_images">"\ue949"</string>
    <string name="ic_save">"\ue946"</string>
    <string name="ic_clear_all">"\ue947"</string>
    <string name="ic_undo">"\ue947"</string>
    <string name="ic_continue">"\ue948"</string>
    <string name="ic_delete">"\ue92c"</string>
    <string name="ic_crop">&#xf565;</string>
    <string name="choose_from_gallery">Choose From Gallery</string>
    <string name="choose_from_camera">Choose From Camera</string>
    <string name="undo">撤消</string>
    <string name="erase">抹去</string>

</resources>