<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.ahmedadeltito.photoeditor.PhotoEditorActivity">

    <com.ahmedadeltito.photoeditor.widget.SlidingUpPanelLayout
        android:id="@+id/sliding_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        app:umanoDragView="@+id/dragView"
        app:umanoOverlay="true"
        app:umanoShadowHeight="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#000000"
            android:gravity="center">

            <RelativeLayout
                android:id="@+id/parent_image_rl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true">

                <ImageView
                    android:id="@+id/photo_edit_iv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop" />

                <com.ahmedadeltito.photoeditorsdk.BrushDrawingView
                    android:id="@+id/drawing_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/photo_edit_iv"
                    android:layout_alignTop="@+id/photo_edit_iv"
                    android:layout_centerInParent="true"
                    android:visibility="gone" />

            </RelativeLayout>

            <TextView
                android:id="@+id/done_drawing_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/done"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/erase_drawing_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_toStartOf="@+id/done_drawing_tv"
                android:padding="10dp"
                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/erase"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/drawing_view_color_picker_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true" />

            <View
                android:id="@+id/top_shadow"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_alignParentTop="true"
                android:background="@drawable/fading_shadow" />

            <RelativeLayout
                android:id="@+id/top_parent_rl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/top_shadow"
                android:layout_alignTop="@+id/top_shadow"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <ImageButton
                    android:id="@+id/close_ibt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:src="@drawable/ic_close"
                    android:background="@android:color/transparent"/>

                <ImageButton
                    android:id="@+id/add_ibt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:padding="15dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_add_text"/>

                <ImageButton
                    android:id="@+id/add_pencil_ibt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/add_ibt"
                    android:padding="15dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_draw"/>

                <ImageButton
                    android:id="@+id/add_crop_ibt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/add_pencil_ibt"
                    android:padding="15dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_crop"/>


                <ImageButton
                    android:id="@+id/add_image_emoji_ibt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/add_crop_ibt"
                    android:padding="15dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_emoji"/>


            </RelativeLayout>

            <View
                android:id="@+id/bottom_shadow"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/below_shadow" />

            <LinearLayout
                android:id="@+id/bottom_parent_rl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/bottom_shadow"
                android:layout_alignTop="@+id/bottom_shadow"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1">
                    <Button
                        android:id="@+id/save_tv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="30dp"
                        android:paddingBottom="15dp"
                        android:text = "@string/save"
                        android:textColor="#FFFFFF"
                        android:drawableTop="@drawable/ic_save"
                        android:background="@android:color/transparent"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1">
                    <Button
                        android:id="@+id/clear_all_tv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="30dp"
                        android:paddingBottom="15dp"
                        android:text = "@string/clear_all"
                        android:textColor="#FFFFFF"
                        android:drawableTop="@drawable/ic_clear_all"
                        android:background="@android:color/transparent"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1">
                    <Button
                        android:id="@+id/undo_tv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="30dp"
                        android:paddingBottom="15dp"
                        android:text = "@string/undo"
                        android:textColor="#FFFFFF"
                        android:drawableTop="@drawable/ic_undo"
                        android:background="@android:color/transparent"
                        android:visibility="gone"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1">
                    <Button
                        android:id="@+id/go_to_next_screen_tv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="30dp"
                        android:paddingBottom="15dp"
                        android:text = "@string/go"
                        android:textColor="#FFFFFF"
                        android:drawableTop="@drawable/ic_goto_next"
                        android:background="@android:color/transparent"/>
                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/delete_rl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:padding="20dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/delete_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/rounded_border_text_view"
                    android:padding="10dp"
                    android:text="@string/ic_delete"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" />

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/image_emoji_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.ahmedadeltito.photoeditor.widget.RealtimeBlurView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:realtimeBlurRadius="10dp"
                app:realtimeOverlayColor="#33ffffff" />

            <com.viewpagerindicator.CirclePageIndicator
                android:id="@+id/image_emoji_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:padding="12dp"
                app:fillColor="#999999"
                app:pageColor="#e7e7e7" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/image_emoji_view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/image_emoji_indicator" />

        </RelativeLayout>

    </com.ahmedadeltito.photoeditor.widget.SlidingUpPanelLayout>

</RelativeLayout>